--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-router-dom": "^4.2.7",
     "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "object-assign": "^4.1.1",
     "path": "^0.12.7",
     "react": "^16.4.1",
