--- a/package.json
+++ b/package.json
@@ -10,22 +10,35 @@
   "author": "hannah",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-decorators": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-jsx": "^7.0.0-beta.55",
+    "@babel/plugin-syntax-typescript": "^7.0.0-beta.55",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.2.7",
+    "@types/redux": "^3.6.0",
+    "babel-loader": "^8.0.0-beta.4",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "object-assign": "^4.1.1",
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "ts-loader": "^4.4.2"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.2",
+    "react-hot-loader": "^4.3.4",
     "typescript": "^2.9.2",
     "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3"
   },
   "keywords": [],
   "description": ""
