--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.2.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "babel-loader": "^8.0.0-beta.4",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
@@ -29,6 +30,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "ts-loader": "^4.4.2"
   },
   "devDependencies": {
